# celer-demos

./: .gitmodules  CMakeLists.txt  README.md
src/CelerExamples/Qt/: CMakeLists.txt
src/CelerExamples/Qt/BasicViewer/: CMakeLists.txt
src/CelerExamples/Qt/BasicViewer/App/: main.cpp
src/CelerExamples/Qt/BasicViewer/Widgets/GLWidget/: GLWidget.cpp  GLWidget.hpp
src/CelerExamples/Qt/BasicViewer/Widgets/GLWidget/Shaders/: boxGeometryShader.frag  boxGeometryShader.geom
src/CelerExamples/Qt/BasicViewer/Widgets/MainWindow/: MainWindow.cpp  MainWindow.hpp
src/CelerExamples/Qt/BasicViewer/Widgets/MainWindow/Resources/: Resources.qrc
